--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "inspinia": "^2.6.5",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "wow.js": "^1.2.2"
   },
   "version": "0.1.0",
   "devDependencies": {
