--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
-    "wow.js": "^1.2.2"
+    "wow": "^0.0.6",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "version": "0.1.0",
   "devDependencies": {
