--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "inspinia": "^2.6.5",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
