--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.2.2",
+    "blueimp-gallery": "^2.38.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "inspinia": "^2.6.5",
     "jquery": "^3.4.1",
+    "jquery-slimscroll": "^1.3.8",
+    "metismenu": "^3.0.6",
+    "peity": "^3.3.0",
     "popper.js": "^1.16.1",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1",
+    "slimscroll": "^0.9.1",
     "turbolinks": "^5.2.0",
     "wow": "^0.0.6",
     "wow.js": "^1.2.2",
